## Headers
include_HEADERS = lasf.h

## Libraries
lib_LTLIBRARIES= liblasf.la
liblasf_la_SOURCES = lasf.h lasf.c lasfhdr.c lasfpnt.c

## C Programs
#bin_PROGRAMS = lasdump lascopy
#las2grd las2nc lasproject
#lasdump_SOURCES = lasdump.c
#lasdump_LDADD = liblasf.la
#lascopy_SOURCES = lascopy.c
#lascopy_LDADD = liblasf.la
