## Directories
bindir=${prefix}/bin

## C Programs
#bin_PROGRAMS = lasdescribe lasdump lasreformat lasselect lasblock lasconvexhull las2xy lasfilter lasbounds las2ogr las2grd
bin_PROGRAMS = lasdump lascopy lasscan 
#las2grd lasbounds las2ogr lasfilter

lasdump_SOURCES = lasdump.c
lasdump_LDADD = ../src/liblasf.la
lascopy_SOURCES = lascopy.c
lascopy_LDADD = ../src/liblasf.la
#las2grd_SOURCES = las2grd.c
lasscan_SOURCES = lasscan.c
lasscan_LDADD = ../src/liblasf.la
#lasbounds_SOURCES = lasbounds.c
#las2ogr_SOURCES = las2ogr.c
#lasfilter_SOURCES = lasfilter.c
