## Directories
bindir=${prefix}/bin

## C Programs
bin_PROGRAMS = lasdump lascopy lasscan lasfilter
#las2grd lasbounds las2ogr lasfilter

lasdump_SOURCES = lasdump.c
lasdump_LDADD = ../src/liblasf.la
lascopy_SOURCES = lascopy.c
lascopy_LDADD = ../src/liblasf.la
#las2grd_SOURCES = las2grd.c
lasscan_SOURCES = lasscan.c
lasscan_LDADD = ../src/liblasf.la
#lasbounds_SOURCES = lasbounds.c
#las2ogr_SOURCES = las2ogr.c
lasfilter_SOURCES = lasfilter.c
lasfilter_LDADD = ../src/liblasf.la
# lastemp_SOURCES = lastemp.c
# lastemp_LDADD = ../src/liblasf.la
